# slurp

./: .dockerignore  .gitignore  Dockerfile.discord-bot  GEMINI.md  README.md  fly.discord-bot.toml  pyproject.toml
bot/: README.md  main.py  requirements.txt
common/: .gitignore  __init__.py  pyproject.toml
common/common/: __init__.py  logger.py
discord-bot/: .gitignore  README.md  chat.py  main.py  pyproject.toml  requirements.txt
discord-bot/src/: chat.py  main.py
discord-bot/tests/: test_chat.py
eval/: canonical_answers.py  config.py  eval.py  questions.py
ingest/: .gitignore  README.md  TODO.md  cache.py  chunk_doc.py  kb.py  llm.py  logger.py  main.py  parse.py  parse_email.py  pdf.py  requirements.txt  send_email.py
ingest/testdata/: _large_bridgewater_newsletter.md  _large_meadowbrook_newsletter.md  bridgewater_incident.md  oakwood_lab_safety.md  oakwood_laboratory.md  oakwood_mathematics.md  oakwood_technology.md  riverside_athletics_carnival.md  riverside_excursion.md  riverside_parent_evening.md  riverside_sports_carnival.md  riverside_swimming.md  willowbrook_achievements.md  willowbrook_farewell.md  willowbrook_newsletter.md  willowbrook_wellbeing.md
ingest/tests/: test_parse.py
project/: GOALS.md  PROMPT.md  STATE.md  TASKS.md
